@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Clean 'status_history' from portal_actions. See changes in getCPSDocuments and
+  the closing commentary of bug #295 for what changed.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
